--- a/css/style.css
+++ b/css/style.css
@@ -112,3 +112,23 @@ nav ul li a.active, nav ul li a:hover{
         left: 0;
     }
 }
+
+@media (max-width: 400px){
+    .logo{
+        font-size: 18px;
+        padding-left: 60px;
+        color: white;
+    }
+}
+
+
+/* for preloader animation  */
+#preloader{
+    background: white url("../images/preloader.gif") no-repeat center center;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    z-index: 100;
+    background-size: 12%;
+}
+/* for preloader animation  */
