--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body{
     font-family: montserrat;
 }
 
+/* start of the heading styling  */
 header{
     height: 80px;
     width: 100%;
@@ -121,6 +122,14 @@ nav ul li a.active, nav ul li a:hover{
     }
 }
 
+/* end of the header styling  */
+
+/* starting of the welcome page styling  */
+.main_container{
+    min-height: 100vh;
+}
+
+/* ending of the welcome page styling  */
 
 /* for preloader animation  */
 #preloader{
@@ -132,3 +141,96 @@ nav ul li a.active, nav ul li a:hover{
     background-size: 12%;
 }
 /* for preloader animation  */
+
+
+/* starting of footer styling  */
+.footer{
+    width: 100%;
+    background-color: #34495e;
+    padding: 70px 0;
+}
+
+.footer-container{
+    max-width: 1170px;
+    margin: auto;
+}
+
+.footer-row{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.footer-col{
+    width: 25%;
+    padding: 0 15px;
+}
+
+.footer-col h4{
+    font-size: 18px;
+    color: #ffffff;
+    text-transform: capitalize;
+    margin-bottom: 30px;
+    font-weight: 900;
+    position: relative;
+}
+
+.footer-col h4::before{
+    content : "";
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    background-color: #e91e63;
+    height: 2px;
+    width: 50px;
+}
+
+.footer-col ul li:not(:last-child){
+    margin-bottom: 10px;
+}
+
+.footer-col ul li a{
+    font-size: 16px;
+    text-transform: capitalize;
+    color: #ffffff;
+    font-weight: 500;
+    color: #bbbbbb;
+    transition: all 0.3s ease;
+}
+
+.footer-col ul li a:hover{
+    color: #ffffff;
+    padding-left: 10px;
+}
+
+.footer-col .social-links a{
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: rgba(255,255,255, 0.2);
+    margin-right: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #ffffff;
+    transition: all 0.3s ease;
+}
+
+.footer-col .social-links a:hover{
+    color: #24262b;
+    background-color: #ffffff;
+}
+
+@media (max-width: 767px){
+    .footer-col{
+        width: 50%;
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-width: 574px){
+    .footer-col{
+        width: 100%;
+        margin-bottom: 30px;
+    }
+}
+/* ending of the footer styling  */
